fix: username hidden if too long

--- a/client/style/feed.css
+++ b/client/style/feed.css
@@ -71,6 +71,9 @@
     font-weight: 600;
     margin: 5px;
     white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    overflow: hidden;
 }
 
 .topic-header {
